<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".presentation.fragments.FragmentResult">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvTitleResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:background="@drawable/fon_my_lime"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/white"
            android:textSize="@dimen/_22sdp"
            android:textStyle="bold"
            tools:text="Победа!!!" />

        <ImageView
            android:id="@+id/ivResult"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            android:src="@drawable/correct_answer" />

        <TextView
            android:id="@+id/tvCountAnswer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_32sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:background="@drawable/fon_my"
            android:padding="@dimen/_8sdp"
            android:text="@string/right_answers"
            android:textSize="@dimen/_14sdp" />

        <TextView
            android:id="@+id/tvPercentAnswer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:background="@drawable/fon_my"
            android:padding="@dimen/_8sdp"
            android:text="@string/percent_answers"
            android:textSize="@dimen/_14sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_marginTop="@dimen/_16sdp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvContinue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:background="@drawable/fon_my_visible"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:text="@string/continue_calculation"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvStopGame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_weight="1"
                android:background="@drawable/fon_my_answer"
                android:gravity="center"
                android:padding="@dimen/_10sdp"
                android:text="@string/stop_calculation"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>